Ensure that we never have horizontal scroll
Firefox adds it because of the way the calendar is positioned and we
don’t like it

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -4,6 +4,7 @@
 
 body {
   background: white;
+  overflow-x: hidden;  /* firefox doesn't like invisible items sticking out */
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
